--- a/index.html
+++ b/index.html
@@ -9,35 +9,49 @@
 </head>
 
 <body>
-    <div id="Password_Generator">
+    <div id="password_generator">
         <h1><b><i><u>Password Generator</u></i></b></h1>
-      <div id="Password_Input">
-          <label for="Password_Length">Length:</label>
-          <input type="number" id="Password_Length" value="12"/>
-          <button onclick="Clicked_Generate_Password()">Click To Generate Password</button> <br>
-          <input checked type="checkbox" id="P_Symbols"/>
-          <label for="P_Symbols">Symbols</label>
-          <input checked type="checkbox" id="P_Lower"/>
-          <label for="P_Lower">Lower Case</label>
-          <input checked type="checkbox" id="P_Capitals"/>
-          <label for="P_Capitals">Capitals</label>
-          <input checked type="checkbox" id="P_Numbers"/>
-          <label for="P_Numbers">Numbers</label>
+      <div id="password_input">
+          <label for="password_length">Length:</label>
+          <input type="number" id="password_length" value="12"/>
+          <button onclick="clicked_generate_password()">Click To Generate Password</button> <br>
+          <input checked type="checkbox" id="password_symbols"/>
+          <label for="password_symbols">Symbols</label>
+          <input checked type="checkbox" id="password_lower"/>
+          <label for="password_lower">Lower Case</label>
+          <input checked type="checkbox" id="password_capitals"/>
+          <label for="password_capitals">Capitals</label>
+          <input checked type="checkbox" id="password_numbers"/>
+          <label for="password_numbers">Numbers</label>
       </div>
-      <input id="Password_Output" readonly />
-      <button onclick="Copy_Password()">Copy!</button>
+      <input id="password_output" readonly />
+      <button onclick="copy_password()">Copy!</button>
     </div>
     
-    <div id="Random_Number_Generator">
+    <div id="random_number_generator">
         <h1><b><i><u>Number Generator</u></i></b></h1>
-        <div id="RN_Input">
-            <label for="Random_Number_Min">Min:</label>
-            <input type="number" id="Random_Number_Min" value="0"/>
-            <label for="Random_Number_Max">Max:</label>
-            <input type="number" id="Random_Number_Max" value="100"/>
-            <button onclick="Clicked_Random_Number_Generator()">Click To Generate Random Number</button>
+        <div id="random_number_input">
+            <label for="random_number_min">Min:</label>
+            <input type="number" id="random_number_min" value="0"/>
+            <label for="random_number_max">Max:</label>
+            <input type="number" id="random_number_max" value="100"/>
+            <button onclick="clicked_random_number_generator()">Click To Generate Random Number</button>
         </div>
-        <input id="RN_Output" readonly />
+        <input id="random_number_output" readonly />
+    </div>
+
+    <div id="base_converter">
+        <h1><b><i><u>Base Converter</u></i></b></h1>
+        <div id="base_converter_input">
+            <label for="base_converter_number">Number:</label>
+            <input type="text" id="base_converter_number"/>
+            <button onclick="clicked_base_converter()">Click To Convert Base</button> <br>
+            <label for="base_converter_old_base">Old Base:</label>
+            <input type="number" id="base_converter_old_base"/>
+            <label for="base_converter_new_base">New Base:</label>
+            <input type="number" id="base_converter_new_base"/>
+        </div>
+        <input id="base_converter_output" readonly />
     </div>
 
     <script src="script.js"></script>
