Added word counter

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         <input id="base_converter_output" readonly />
     </div>
 
+    <div id="word_counter">
+        <h1><b><i><u>Word Counter</u></i></b></h1>
+        <div id="word_counter_input">
+            <button onclick="clicked_word_counter()">Click To Count Words</button> <br>
+            <label for="optional_word_counter_input">Firefox please paste here:</label>
+            <input type="text" id="optional_word_counter_input"/>
+        </div>
+        <input id="word_counter_output" readonly> 
+    </div>
+
     <script src="script.js"></script>
 </body>
 
